--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Loved.com | Domain for Sale</title>
+        <title>Flyte.com | Domain for Sale</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <style>
             body {
                 margin: 0;
@@ -34,7 +34,7 @@
                 height: 200px;
       }   
             h1 {
-                font-family: "Fuzzy Bubbles";
+                font-family: "Saira";
                 font-weight: 400;
                 font-style: normal;
                 font-size: 100px;
@@ -58,7 +58,7 @@
     <body>
         <div class="container">
             <img src="hearthands.png" width="200" height="200">
-            <h1>Loved.com</h1>
+            <h1>Flyte.com</h1>
             <h2>For Sale</h2>
             <br>
             <p>Premium domain name opportunity represents a compelling opportunity for a worthy venture to build their brand.</p>
