--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </head>
     <body>
         <div class="container">
-            <img src="hearthands.png" width="200" height="200">
+            <img src="flyte.png" width="200" height="200">
             <h1>Flyte.com</h1>
             <h2>For Sale</h2>
             <br>
