--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 height: 100vh;
                 font-family: "Montserrat";
                 color: #fff;
-                background: #ff009e;
+                background: #89cff0;
                 background-size: 400% 400%;
                 text-align: center;
             }
