--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
                 background-size: 400% 400%;
                 text-align: center;
             }
+            @media (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
+            }
             .container {
                 width: 100%;
-                position: absolute;
                 top: 10%;
                 text-align: center;
                 margin: auto;
