--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
             <p>As a single word, 5-letter domain name we anticipate this is a 7-figure domain name for the right buyer.</p>
             <br>
             <div class="my-4">
-                <a class="bg-yellow-300 px-8 py-3 rounded hover:bg-yellow-400 transition duration-300" href="mailto:premiumdomainagent@gmail.com">Email Offer</a>
+                <a class="bg-yellow-300 px-8 py-3 rounded hover:bg-yellow-400 transition duration-300" href="mailto:premiumdomainagent@gmail.com?subject=Flyte.com&body=I am interested in your domain name Flyte.com. My offer is">Email Offer</a>
             </div>
         </div>
     </body>
 </html>
+
+<a href="mailto:test@example.com?subject=Testing out mailto!&body=This is only a test!">Second Example</a>
